@@ -1787,3 +1787,5 @@ Thanks to Erich Philips for the feature request.
 Added BSDF data-driven material type with full sampling support.
 
 Added BRDF calculations to genBSDF.
+
+Bug fixes in rsensor thanks to help from David Geisler-Moroder.
